--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <meta name="author" content="Connor Webb">
+        <title>CE Truffaut | Web Developer</title>
     </head>
     <body>
-       Hello, World, and welcome to my first website!
+      <p>Hello, World, and welcome to my first website!</p>
+      <p>This is my first website! Come back later for more updates!</p>
     </body>
 </html>
